SERVER-6509 ignore SIGPIPE rather than printing a message

Solaris was crashing because we were using signal() instead of sigaction()
to install the dummy signal handler for SIGPIPE.  SIGPIPE is supressed
via the socket library on other operating systems but this is not an option
on Solaris.

Conflicts:
	db/db.cpp